Put In Footer And Fixed Some Spacing

--- a/styles.css
+++ b/styles.css
@@ -439,7 +439,7 @@ padding: 0 0px 25px 0px;
     left: 0;
     width: 100%;
     height: 100%;
-    background-image: url("forestroad-img.jpg");
+    background-image: url("panoramalandscape-img.jpg");
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -513,12 +513,12 @@ input, textarea {
     font-family: inherit;
     height: auto;
     border-radius: 5px;
-    border: 0.5px solid transparent;
+    border: 1px solid transparent;
 }
 
 .submit-button {
 
-    margin: 10px auto 10px 40%;
+    margin: 10px auto 50px 40%;
     background-color: #262628;
     color: #fff;
     font-size: 18px;
@@ -546,5 +546,20 @@ input, textarea {
 
     color: #999;
     font-size: 14px;
+
+}
+
+footer {
+
+    color: #999;
+    font-size: 14px;
+    text-align: center;
+    margin: 20px 0px;
+
+}
+
+hr {
+
+    border: 1px solid rgba(17, 17, 17, 0.1);
 
 }
